프로젝트 export 설정

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="export/dolki.exe"
+export_path="build/Universe.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -23,7 +23,7 @@ script_export_mode=2
 custom_template/debug=""
 custom_template/release=""
 debug/export_console_wrapper=0
-binary_format/embed_pck=false
+binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
 binary_format/architecture="x86_64"
@@ -34,16 +34,16 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon=""
-application/console_wrapper_icon=""
+application/icon="uid://o2g1ptdlwxc5"
+application/console_wrapper_icon="uid://csxlwi43ytcub"
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
-application/company_name="Geoyeob Kim"
-application/product_name="Dolki"
-application/file_description=""
-application/copyright=""
-application/trademarks=""
+application/company_name="Plus Alpha Game Studio"
+application/product_name="Universe"
+application/file_description="Universe Prototype"
+application/copyright="2025 Plus Alpha Game Studio"
+application/trademarks="Plus Alpha Game Studio"
 application/export_angle=0
 application/export_d3d12=0
 application/d3d12_agility_sdk_multiarch=true
